some alignment fixes for mobile

--- a/assets/css/festival-2025.css
+++ b/assets/css/festival-2025.css
@@ -48,11 +48,16 @@ body {
 .section-title {
   font-family: "CustomComicSansBold";
   font-size: 20px;
+  text-align: center;
 }
 
 .page-title {
   font-family: "CustomComicSansBold";
   font-size: 25px;
+
+  @media (max-width: 768px) {
+    text-align: center;
+  }
 }
 
 
@@ -187,16 +192,33 @@ body {
 
 .img-banana {
   margin: 0 70px 0 0;
+
+   @media (max-width: 768px) {
+    margin: 0;
+    justify-self: center;
+  }
 }
 
 .img-wheelbarrow {
   margin: 0;
+
+   @media (max-width: 768px) {
+    justify-self: center;
+  }
 }
 
 .img-tea-monkey {
   margin: 0;
+
+   @media (max-width: 768px) {
+    justify-self: center;
+  }
 }
 
 .img-tomato-chair {
   margin: 0;
+
+   @media (max-width: 768px) {
+    justify-self: center;
+  }
 }
